added school switcher component
