# backend/internal/api/router.go
@@ -152,6 +152,7 @@ func (r *Router) RegisterRoutes(app *fiber.App, redisClient *redis.Client, logge
 	protected.Post("/school/register", r.School.RegisterSchool)
 	protected.Get("/schools", r.School.ListSchools)
 	protected.Post("/school", r.SchoolCreate.CreateSchool)
+	protected.Post("/school/set-active", r.School.SetActiveSchool)
 	protected.Post("/school/academic-period", r.AcademicPeriod.CreateAcademicPeriod)
 	protected.Post("/school/streams", r.Streams.CreateStreams)
 	protected.Get("/school/grades", r.Grades.GetGrades)
